# model-inference-pipeline

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  test_input.csv
.github/workflows/: log-metadata.yml  predict-parallel.yml  predict-serve-sample.yml  predict.yml  run-inference-instance.yml  run-inference-pipeline.yml  run-precalc-pipeline.yml  run-serving-pipeline.yml  serve-parallel.yml  serve-to-dynamo.yml  serve.yml
config/: app.py  config.py  settings.env  stack.env
ersilia_precalc_poc/: read.py  write.py
infra/: README.md
infra/precalculator/: README.md  app.py  requirements.txt
infra/precalculator/lambda/: api_handler.py  fetch_predictions.py  generate_presigned_url.py  get_model.py
infra/precalculator/precalculator/: precalculator_stack.py
infra/precalculator/tests/unit/: test_precalculator_stack.py
lambda/: fetch_predictions.py
notebooks/: athena-poc.ipynb  benchmark_dynamodb_writing.ipynb  postprocess.ipynb
precalculator/: config.py  fetcher.py  inference.py  models.py  read.py  test.py  write.py  writer.py
scripts/: README.md  create_dynamodb_table.py  fetch_predictions.py  generate_predictions.py  generate_predictions_with_aws_and_ersilia.py  inference-cron-job.sh  inference-table-list.csv  upload_partitions_to_s3.py  write_metadata_to_s3.py  write_predictions_to_dynamodb.py
tests/: test_models.py  test_read.py
tests/fixtures/: test_output.csv
workflows/: README.md  inference-pull-request.sh  run-inference-instance.yml  run-inference-pipeline.yml  run-precalc-pipeline.yml
